--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "scripts": {
     "install-deps": "npm install --prefix backend && npm install --prefix frontend",
     "build": "npm run build:frontend",
-    "build:frontend": "cd frontend && npm run build",
+    "build:frontend": "cd Quiz-App-master-main/frontend && npm run build",
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
-    "start:backend": "cd backend && node app.js",
-    "start:frontend": "cd frontend && npm start",
+    "start:backend": "cd Quiz-App-master-main/backend && node app.js",
+    "start:frontend": "cd Quiz-App-master-main/frontend && npm start",
     "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
   },
   "devDependencies": {
     "concurrently": "^9.2.1"
   }
 }
- 
+{
+  "scripts": {
+     
+    
+  }
+}
