--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
-
 {
   "name": "quiz-app-master-main",
   "version": "1.0.0",
   "scripts": {
-    "install-deps": "npm install --prefix backend && npm install --prefix frontend",
-    "build": "npm run build:frontend",
-    "build:frontend": "cd frontend && npm run build",
-    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
-    "start:backend": "cd backend && node app.js",
-    "start:frontend": "cd frontend && npm start",
-    "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
+    "install-deps": "cd Quiz-App-master-main && npm install --prefix backend && npm install --prefix frontend",
+    "build": "cd Quiz-App-master-main && npm run build:frontend",
+    "build:frontend": "cd Quiz-App-master-main/frontend && npm run build",
+    "start": "cd Quiz-App-master-main/backend && node app.js",
+    "dev": "concurrently \"cd Quiz-App-master-main/backend && node app.js\" \"cd Quiz-App-master-main/frontend && npm start\""
   },
   "devDependencies": {
     "concurrently": "^9.2.1"
