--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "quiz-app-master-main",
   "version": "1.0.0",
   "scripts": {
-    "install-deps": "npm install --prefix frontend",
-    "build": "npm run build:frontend", 
-    "build:frontend": "cd frontend && npm run build",
-    "start": "node backend/app.js",
+    "install-deps": "npm install --prefix FRONTEND",
+    "build": "npm run build:frontend",
+    "build:frontend": "cd FRONTEND && npm run build",
+    "start": "node BACKEND/app.js",
     "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
-    "start:backend": "cd backend && node app.js",
-    "start:frontend": "cd frontend && npm start"
+    "start:backend": "cd BACKEND && node app.js",
+    "start:frontend": "cd FRONTEND && npm start"
   },
   "devDependencies": {
     "concurrently": "^9.2.1"
